--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,13 +3,8 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  font-family: var(--font-body), sans-serif;
-}
-
 @layer base {
   :root {
-    /* Theme: Almost White */
     --background: 240 5% 98%; /* off-white (#FAFAFB) */
     --foreground: 240 10% 3.9%; /* near-black */
 
@@ -35,6 +30,7 @@ body {
     --destructive-foreground: 0 0% 98%;
 
     --border: 240 5.9% 90%;
+    --border-strong: 240 6% 10%;
     --input: 240 5.9% 90%;
     --ring: 221 83% 53%;
 
@@ -50,7 +46,6 @@ body {
   }
 
   .dark {
-    /* Theme: Almost Black */
     --background: 240 6% 10%; /* near-black (#17171A) */
     --foreground: 0 0% 98%; /* off-white */
 
@@ -76,6 +71,7 @@ body {
     --destructive-foreground: 0 0% 98%;
 
     --border: 240 3.7% 15.9%;
+    --border-strong: 0 0% 98%;
     --input: 240 3.7% 15.9%;
     --ring: 217 91% 60%;
     
